Mon Dec 16 13:00:42 CET 2002 <Daniel.Diaz@inria.fr>

	* port to x86_64/linux - many thanks to:
	  Gwenole Beauchesne <gbeauchesne@mandrakesoft.com>

Mon Sep 30 22:08:41 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bug in predicate_property/2
	
Wed Sep 25 13:41:46 CEST 2002 <Daniel.Diaz@inria.fr>

	* add new built-in fork_prolog/1 and create_pipe/2
	
Tue Sep 24 19:30:35 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix a bug in atom_concat/3

Thu Sep 19 12:53:45 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bug when detecting if a stream can be repositioned

Thu Sep 12 18:45:10 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bug in output to constant terms (e.g. write_to_atom/2)
	* include another additional patch for sockets under win32 - due to:
	  Brent Fulgham <brent.fulgham@xpsystems.com>
	* fix bug in bagof/3 with FD variables
	* fix bug with randomize/0

Fri Jun 21 18:32:06 CEST 2002 <Daniel.Diaz@inria.fr>

	* added min/max to Prolog arithmetics

Thu Jun 20 15:20:43 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bugs in current_predicate and predicate_property

Mon Jun 10 14:25:52 CEST 2002 <Daniel.Diaz@inria.fr>

	* port to powerpc/Darwin (Mac OS X) - many thanks to:
          Lindsey Spratt <spratt@alum.mit.edu>
	* fix bug in Win32 GUI console (deal with edit control text limit)
	* fix bug with in-place installation procedure

Wed Apr 24 19:00:03 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix problem with portray_clause/2 using $VARNAME and $VAR
	  now portray_clause((p(Z):-p('$VARNAME'('A'),Z))) is ok

Tue Apr 23 13:13:18 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bug with stream buffering (open/4 and set_stream_buffering/2)

Sat Apr 21 13:09:54 CEST 2002 <Daniel.Diaz@inria.fr>

	* add stream mirror facility (see add_stream_mirror/2)

Fri Apr 19 15:20:51 CEST 2002 <Daniel.Diaz@inria.fr>

	* improve global vars (arg. selector, automatic array, new built-ins)

Sun Apr 14 16:35:10 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix two bugs with Ctrl+C reentrency under the top-level
