@@ -1,5 +1,6 @@
 Change in GNU Prolog version 1.2.17:
 
+* fix a bug with _XXX (re)displayed under the top-level
 * port to x86_64/linux - many thanks to:
   Gwenole Beauchesne <gbeauchesne@mandrakesoft.com>
 
